feat: implement membership tier discount system